# PicoRocket

./: .gitignore  CMakeLists.txt  LICENSE  MPU.c  MPU.h  README.md  offsets.txt  rocket.c
host-tools/: hostprogram.py  uploadfirmware.py
programs/: programbuilder  programbuilder.cpp  test2  test3  test4  test5  textprogram
src/guidance/: guidance.c  guidance.h
src/kernel/: kernel.c  kernel.h
src/rocket/: rocket.c  rocket.h
src/terminal/: commands.h  terminal.c  terminal.h
